# api-gateway

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  bacon.toml  config.schema.json  release-please-config.json
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: lint-pr.yml  publish.yml  release-please.yml  test.yml
src/: env.rs  main.rs
src/app/: config.rs  context.rs  endpoint.rs  gateway.rs  mod.rs  proxy.rs  rate_limit.rs  request.rs
src/config/: app.rs  apps.rs  auth.rs  cache.rs  endpoint.rs  method.rs  mod.rs  quota.rs  time.rs  upstream.rs
src/config/auth/: basic.rs  endpoint.rs  jwt.rs  mod.rs
src/http/: cors.rs  headers.rs  health_check.rs  mod.rs  server.rs
src/utils/: time.rs
test-macros/: Cargo.toml
test-macros/src/: lib.rs
test-macros/src/test_macro/: attributes.rs  mod.rs
test-macros/tests/: test_macro.rs
test-macros/tests/test_macro/: 01-parse-attributes.rs  02-missing-servers-attribute.rs  02-missing-servers-attribute.stderr  03-missing-config-attribute.rs  03-missing-config-attribute.stderr
test-utils/: Cargo.toml
test-utils/src/: bin.rs  lib.rs  redis.rs  utils.rs
tests/: single_server.rs
