[package]
name = "api-gateway"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.20", default-features = false, features = ["clock", "serde"] }
derive_more = "0.99.7"
env_logger = "0.11"
eyre = { version = "0.6", default-features = false, features = ["auto-install", "track-caller"] }
color-eyre = "0.6"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
rand = "0.8"
slab = "0.4"
serde = "1.0.197"
serde_json = "1.0.114"
pingora = { version = "0.1.0", features = ["proxy"] }
regex = "1.10.3"
async-trait = "0.1.77"
structopt = "0.3.26"
redis = "0.25.0"
