[package]
name = "api-gateway"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "0.3.6", git = "https://github.com/majksa-dev/rust-essentials" }
gateway = { tag = "0.5.4", features = ["full"], git = "https://github.com/majksa-dev/rust-gateway"}
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
derive_more = "0.99.18"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
rand = "0.8.5"
slab = "0.4.9"
serde = "1.0.203"
serde_json = "1.0.118"
regex = "1.10.5"
async-trait = "0.1.80"
structopt = "0.3.26"
redis = "0.25.4"
http = "1.1.0"
envy = "0.4.2"
tokio = { version = "1.38", features = ["full"] }
bb8-redis = "0.15.0"
anyhow = "1.0.86"
url = "2.5.2"

[dev-dependencies]
testing-utils = { tag = "0.1.5", git = "https://github.com/majksa-dev/rust-testing-utils" }
pretty_assertions = "1.4.0"
wiremock = "0.6.0"
